Post-search view is no longer wrong in Safari.
The div around "tree-tip" and "tip" was too tall.

--- a/templates/mozilla/static/layout.css
+++ b/templates/mozilla/static/layout.css
@@ -86,9 +86,6 @@
     padding-left: 20px;
 }
 
-#tip {
-    float: left;
-}
 #tree-tip {
     float: right;
 }
